fix: updated dark mode colors and removed unnecessary css

--- a/workspace/themes/dark.css
+++ b/workspace/themes/dark.css
@@ -1,6 +1,5 @@
 :root {
-    --primary: #181818;
-    --secondary: #2C2F33;
+    --primary: #10131a;
+    --secondary: #303a4f;
     --tertiary: #fafafa;
-    --highlight: #e65719;
 }
