--- a/workspace/themes/light.css
+++ b/workspace/themes/light.css
@@ -2,5 +2,4 @@
     --primary: #fafafa;
     --secondary: #dbdbdb;
     --tertiary: #2C2F33;
-    --highlight: #e65719;
 }
