--- a/workspace/themes/solarized.css
+++ b/workspace/themes/solarized.css
@@ -2,5 +2,4 @@
     --primary: #002b36;
     --secondary: #073642;
     --tertiary: #eee8d5;
-    --highlight: #e65719;
 }
